--- a/Frontend/src/styles/Sidebar.css
+++ b/Frontend/src/styles/Sidebar.css
@@ -145,7 +145,6 @@
     background-color: var(--bg-menu-color);
     color: var(--text-color);
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
-    padding: 15px 15px;
     opacity: 0;
     transform: translateX(-10px);
     pointer-events: none;
@@ -168,6 +167,7 @@
     display: flex;
     flex-direction: column;
     margin-right: 15px;
+    margin-left: 15px;
 }
 
 .avatar-info .avatar-name {
