--- a/Frontend/src/styles/JournalPage.css
+++ b/Frontend/src/styles/JournalPage.css
@@ -1,11 +1,11 @@
 .journal-page {
-    background-color: var(--bg-color);
-    padding-left: 45px;
+   display: flex;
+    flex-direction: row;
 }
 
 .journal-page-main-container {
     flex-grow: 1;
-    padding: 0px 0px 0px 28px;
+    padding: 0;
     display: flex;
     flex-direction: column;
     overflow: hidden;
